# claude-cortex

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  TODOS.md  claude_code_architecture_graph.jsx  pyproject.toml  setup.py
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: cortex-advisor.md  graph-maintainer.md  work-evaluator.md
.claude/commands/: auto-research.md  brainiac.md  cortex-dashboard.md  cortex-graph.md  cortex-recommend.md  cortex-snapshot.md  cortex-status.md  cost-report.md  hypothesis.md  learn.md  ralph-start.md  ralph-status.md  ralph-stop.md  review-and-ship.md  run-tasks.md
.claude/rules/: autonomy.md  brainiac.md  contextscore.md  cortex.md  hooks.md  session-config.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  vault-ingest.yml
agents/: cortex-advisor.md
brainiac/: __init__.py  __main__.py  cli.py  clusters.py  consolidator.py  embeddings.py  graph.py  ingest.py  linker.py  renderer.py  retriever.py
commands/: brainiac.md  cortex-dashboard.md  cortex-graph.md  cortex-recommend.md  cortex-snapshot.md  cortex-status.md  hypothesis.md  learn.md  ralph-start.md  ralph-status.md  ralph-stop.md  review-and-ship.md  run-tasks.md
contextscore/: README.md  pyproject.toml
contextscore-cc/: README.md  package.json  tsconfig.json
contextscore/dashboard/: contextscore_dashboard.jsx
contextscore/examples/: demo.py
contextscore/src/contextscore/: __init__.py  middleware.py  models.py  scorer.py
contextscore/src/contextscore/analyzers/: __init__.py  base.py  density.py  distractors.py  economics.py  fragmentation.py  redundancy.py  semantic_relevance.py  structure.py
contextscore/src/contextscore/api/: __init__.py  server.py
contextscore/src/contextscore/snapshot/: __init__.py  extractor.py  recovery.py  store.py
contextscore/src/contextscore/utils/: __init__.py
contextscore/tests/: test_contextscore.py  test_middleware.py  test_snapshot.py
cortex/: README.md  dashboard.jsx  package-lock.json  package.json  tsconfig.json
dashboard/: architecture.html  insights.html
examples/: example-pattern.md
hooks/: hooks.json
openbrain/: README.md  package.json
scripts/: tmux-launch.sh
tests/: test_brainiac_quality.py  test_cli.py  test_clusters.py  test_consolidator.py  test_embeddings.py  test_graph.py  test_ingest.py  test_reranker.py  test_temporal_decay.py
(+68 files in other folders)
