[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cortex"
version = "0.3.0"
description = "Graph-based self-learning memory system for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=5.4.1",
    "numpy>=1.24.0",
]

[project.scripts]
brainiac = "brainiac.cli:main"

[project.urls]
Homepage = "https://github.com/Peaky8linders/claude-cortex"
Repository = "https://github.com/Peaky8linders/claude-cortex"
